[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Pest.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/Concept_BG_5.png" type="Texture" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/aie1.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 202.105, 543.934 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Pest = ExtResource( 2 )

[node name="PestTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 955.5, 541 )
texture = ExtResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="StingZone" type="Area2D" parent="."]
position = Vector2( 1558.5, 490.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StingZone"]
position = Vector2( 162, 46.5 )
shape = SubResource( 1 )

[node name="Face" type="Node2D" parent="StingZone"]
position = Vector2( 172.5, 124.5 )

[node name="aie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="PestTimer" to="." method="_on_PestTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="body_entered" from="StingZone" to="." method="_on_StingZone_body_entered"]
